--- a/demo/index.html
+++ b/demo/index.html
@@ -10,21 +10,21 @@
     <form action="" class="flabel__form">
       <div class="flabel__group">
         <label for="name" class="flabel__label">Name</label>
-        <input type="text" id="name" name="name" class="flabel__input" placeholder="Name">
+        <input type="text" id="name" class="flabel__input" placeholder="Name">
       </div>
       <div class="flabel__group">
         <label for="email" class="flabel__label">Email</label>
-        <input type="text" id="email" name="email" class="flabel__input" placeholder="Email">
+        <input type="text" id="email" class="flabel__input" placeholder="Email">
       </div>
       <div class="flabel__group">
         <label for="hair" class="flabel__label">Hair?</label>
-        <input type="text" id="hair" name="hair" class="flabel__input" placeholder="Hair?">
+        <input type="text" id="hair" class="flabel__input" placeholder="Hair?">
       </div>
       <div class="flabel__group">
         <label for="hair" class="flabel__label">Feelings</label>
-        <textarea id="hair" name="feelings" class="flabel__input" placeholder="Feelings"></textarea>
+        <textarea id="hair" class="flabel__input" placeholder="Feelings"></textarea>
       </div>
-      <input type="hidden" name="postback" value="true">
+      <input type="hidden" value="true">
       <input type="submit">
     </form>
 
