Move to src/ dir

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@
     </form>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="../floatLabel.js"></script>
+    <script src="../dist/floatLabel.min.js"></script>
     <script>
       if (Modernizr.input.placeholder) {
         $('.flabel__form').floatLabels();
