Remove orange border from headings

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <div class="behavior-demo column--left">
               <h1 class="behavior-demo__heading">classic</h1>
               <div class="flabel__group">
-                <label for="classic" class="flabel__label flabel__label--classic">Destroy all humans?</label>
-                <input type="text" name="classic" class="flabel__input" placeholder="Destroy all humans?">
+                <label for="classic" class="flabel__label flabel__label--classic">Your Quest</label>
+                <input type="text" name="classic" class="flabel__input" placeholder="Your Quest">
               </div>
             </div>
             <div class="behavior-code column--right behavior-code--odd">
@@ -139,8 +139,8 @@
             <div class="behavior-demo column--left">
               <h1 class="behavior-demo__heading">drop</h1>
               <div class="flabel__group">
-                <label for="drop" class="flabel__label flabel__label--drop">Serial Number</label>
-                <input type="text" name="drop" class="flabel__input" placeholder="Serial Number">
+                <label for="drop" class="flabel__label flabel__label--drop">Destroy all humans?</label>
+                <input type="text" name="drop" class="flabel__input" placeholder="Destroy all humans?">
               </div>
             </div>
             <div class="behavior-code column--right ">
@@ -170,8 +170,8 @@
             <div class="behavior-demo column--left">
               <h1 class="behavior-demo__heading">from-right</h1>
               <div class="flabel__group">
-                <label for="from-right" class="flabel__label flabel__label--from-right">Favorite Power Ranger</label>
-                <input type="text" name="from-right" class="flabel__input" placeholder="Favorite Power Ranger">
+                <label for="from-right" class="flabel__label flabel__label--from-right">Email Address</label>
+                <input type="text" name="from-right" class="flabel__input" placeholder="Email Address">
               </div>
             </div>
             <div class="behavior-code column--right behavior-code--odd">
