--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" value="width=device-width">
-    <link rel="stylesheet" href="/demo/reset.css">
-    <link rel="stylesheet" href="/demo/style.css">
-    <script src="/demo/vendor/modernizr.min.js"></script>
+    <link rel="stylesheet" href="demo/reset.css">
+    <link rel="stylesheet" href="demo/style.css">
+    <script src="demo/vendor/modernizr.min.js"></script>
     <style>
       .hll { background-color: #49483e }
 .c { color: #75715e } /* Comment */
@@ -139,8 +139,8 @@
             <div class="behavior-demo column--left">
               <h1 class="behavior-demo__heading">drop</h1>
               <div class="flabel__group">
-                <label for="drop" class="flabel__label flabel__label--drop">Destroy all humans?</label>
-                <input type="text" name="drop" class="flabel__input" placeholder="Destroy all humans?">
+                <label for="drop" class="flabel__label flabel__label--drop">Last Name</label>
+                <input type="text" name="drop" class="flabel__input" placeholder="Last Name">
               </div>
             </div>
             <div class="behavior-code column--right ">
@@ -170,8 +170,8 @@
             <div class="behavior-demo column--left">
               <h1 class="behavior-demo__heading">from-right</h1>
               <div class="flabel__group">
-                <label for="from-right" class="flabel__label flabel__label--from-right">Email Address</label>
-                <input type="text" name="from-right" class="flabel__input" placeholder="Email Address">
+                <label for="from-right" class="flabel__label flabel__label--from-right">Destroy all humans?</label>
+                <input type="text" name="from-right" class="flabel__input" placeholder="Destroy all humans?">
               </div>
             </div>
             <div class="behavior-code column--right behavior-code--odd">
@@ -192,8 +192,8 @@
         </footer>
       </div>
     </div>
-    <script src="/demo/vendor/jquery.min.js"></script>
-    <script src="/dist/floatLabel.min.js"></script>
+    <script src="demo/vendor/jquery.min.js"></script>
+    <script src="dist/floatLabel.min.js"></script>
     <script>
       if (Modernizr.input.placeholder) {
         $('body').floatLabels();
