Update demo copy and readme contributing section

--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
         <section class="intro">
           <h1 class="intro__heading">flyLabel.js</h1>
           <p>
-            This is the <a href="https://github.com/athaeryn/flyLabel.js">flyLabel.js</a>
-            demo. The CSS defines the behavior of the labels. Behaviors
-            authored by Mike Anderson unless otherwise stated.
+            Flexible floating form labels to make your boring placeholders <em>super fly</em>.
+            Based on the <a href="http://mattdsmith.com/float-label-pattern/">FloatLabel</a> pattern by Matt Smith.
+            With flyLabel.js, it's easy to trigger custom behaviors on form labels.
+            Check out the examples, and <a href="https://github.com/athaeryn/flyLabel.js#contributing">contribute your own</a>.
           </p>
         </section>
         
@@ -119,8 +120,8 @@
             <div class="behavior-demo column--left">
               <h1 class="behavior-demo__heading">classic</h1>
               <div class="fly__group">
-                <label for="classic" class="fly__label fly__label--classic">Your Quest</label>
-                <input type="text" name="classic" class="fly__input" placeholder="Your Quest">
+                <label for="classic" class="fly__label fly__label--classic">Favorite Power Ranger</label>
+                <input type="text" name="classic" class="fly__input" placeholder="Favorite Power Ranger">
               </div>
             </div>
             <div class="behavior-code column--right behavior-code--odd">
@@ -140,8 +141,8 @@
             <div class="behavior-demo column--left">
               <h1 class="behavior-demo__heading">drop</h1>
               <div class="fly__group">
-                <label for="drop" class="fly__label fly__label--drop">Serial Number</label>
-                <input type="text" name="drop" class="fly__input" placeholder="Serial Number">
+                <label for="drop" class="fly__label fly__label--drop">Destroy all humans?</label>
+                <input type="text" name="drop" class="fly__input" placeholder="Destroy all humans?">
               </div>
             </div>
             <div class="behavior-code column--right ">
