Update contribute link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Flexible floating form labels to make your boring placeholders <em>super fly</em>.
             Based on the <a href="http://mattdsmith.com/float-label-pattern/">FloatLabel</a> pattern by Matt Smith.
             With flyLabel.js, it's easy to trigger custom behaviors on form labels.
-            Check out the examples, and <a href="https://github.com/space150/flyLabel.js#contributing">contribute your own</a>.
+            Check out the examples, and <a href="https://github.com/space150/flyLabel.js/pulls">contribute your own</a>.
           </p>
         </div>
 
